# trapez

./: Cargo.toml  README.md
data/: in.csv  out.csv
src/: account.rs  amount.rs  cli.rs  main.rs  processor.rs  serde_str.rs
