[package]
name = "trapez"
version = "0.1.0"
authors = ["André Rüdiger <andre.ruediger@gmail.com>"]
edition = "2021"

[dependencies]
csv = { version = "1.1" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1.0" }
tokio = { version = "1.20", features = [ "rt-multi-thread", "sync", "macros" ] }

[dev-dependencies]
serde_test = { version = "1" }

